--- a/lib/memory_web/templates/page/index.html.eex
+++ b/lib/memory_web/templates/page/index.html.eex
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="column">
     <h1 id="index-page">Join a Game</h1>
-    <input type="text" id="gName">
+    <input type="text" id="gameName">
     <button id="jg" onClick="go()">Join Game</button>
   </div>
 </div>
@@ -9,8 +9,8 @@
 
 <script>
 	function go() {
-		var link = "https://www.w3schools.com/jsref/event_onclick.asp";
-		//var link = "http://memory2.concola9.com/game/" + document.getElementById("gName").value;
+		//var link = "https://www.w3schools.com/jsref/event_onclick.asp";
+		var link = "http://memory2.concola9.com/game/" + document.getElementById("gameName").value;
 		window.location.replace(link);
 	}
 </script>
